test/source/carehub/main/default/objects/Case/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <formula>Asset.AssetId__c</formula>
    <label>Asset ID</label>
    <type>Text</type>
</CustomField>