test/source/carehub/main/default/objects/Case/fields/ContactRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>ContactRecordTypeName__c</fullName>
    <formula>Contact.RecordType.Name</formula>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>