test/source/carehub/main/default/objects/Case/recordTypes/GroupingCase.recordType-meta.xml
<RecordType>
    <fullName>GroupingCase</fullName>
    <active>true</active>
    <businessProcess>HealthCare</businessProcess>
    <label>Grouping Case</label>
</RecordType>