test/source/carehub/main/default/objects/Case/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>EventCategory__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>AssetId__c</columns>
    <columns>Event__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>