test/source/carehub/main/default/objects/Case/listViews/GroupingCases.listView-meta.xml
<ListView>
    <fullName>GroupingCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.GroupingCase</value>
    </filters>
    <label>Grouping Cases</label>
</ListView>